# GameOfLife

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md  conanfile.txt
include/: DrawableGrid.hpp  Grid.hpp
src/: DrawableGrid.cpp  GameOfLife.cpp  Grid.cpp
